--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "mapping-utility",
-    "version": "2.0.0",
-    "description": "<img align=\"left\" src=\"https://github.com/KivalEvan/BeatSaber-MapCheck/blob/main/icon-large.png\" height=\"176\" width=\"176\">",
+    "name": "beatsaber-mappingutility",
+    "version": "2.1.0",
+    "description": "",
     "private": true,
     "devDependencies": {
-        "ts-loader": "^9.2.3",
-        "typescript": "^4.3.2",
-        "webpack": "^5.39.0",
-        "webpack-cli": "^4.7.2",
-        "webpack-merge": "^5.8.0"
+        "typescript": "^4.5.4",
+        "vite": "^2.7.10"
     },
     "scripts": {
-        "test": "jest",
-        "build": "webpack --config webpack.prod.js",
-        "dev": "webpack --config webpack.dev.js",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "check": "tsc",
+        "preview": "vite preview",
+        "serve": "vite preview --port 8080",
         "clean": "npm cache clean --force"
     },
     "repository": {
