--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
             # pass --base for application to work under GitHub pages
             - name: Install and build
               run: |
-                  npm install
-                  npm run build -- --base=/${{ github.event.repository.name }}/
+                  yarn
+                  yarn run build -- --base=/${{ github.event.repository.name }}/
             - name: Deploy to github pages
               uses: JamesIves/github-pages-deploy-action@4.1.0
               with:
